# texttool

./: CMakeLists.txt  README.md  texttool.cpp  titletool.cpp
